--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <strong>Try it free 7 days</strong> then $20/mo. thereafter
           </button>
           <div class="card">
-            <form class="signup-form" action="/" id="form">
+            <form class="signup-form" action="" id="form">
               <div class="form-input">
                 <label class="custom-field">
                   <input
