--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="content-wrapper" role="main">
       <div class="content">
-        <section role="info" class="left">
+        <section class="left">
           <h1 class="title">Learn to code by watching others</h1>
           <p class="description">
             See how experienced developers solve problems in real-time. Watching
@@ -32,7 +32,7 @@
             <strong>Try it free 7 days</strong> then $20/mo. thereafter
           </button>
           <div class="card">
-            <form class="signup-form" action="/main.js" id="form" role="form">
+            <form class="signup-form" action="/main.js" id="form">
               <div class="form-input">
                 <label class="custom-field">
                   <input
@@ -102,12 +102,10 @@
                 Claim your free trial
               </button>
             </form>
-            <section role="contentinfo">
-              <p class="consent">
-                By clicking the button you are agreeing to our
-                <a href="#"><strong>Terms and Services</strong></a>
-              </p>
-            </section>
+            <p class="consent" role="contentinfo">
+              By clicking the button you are agreeing to our
+              <a href="#"><strong>Terms and Services</strong></a>
+            </p>
           </div>
         </section>
       </div>
