--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/gh-icon.png"
     />
 
     <link rel="stylesheet" href="/styles.css" />
 
-    <title>Frontend Mentor | Intro component with sign up form</title>
+    <title>Tip Application</title>
   </head>
   <body>
     <div class="content-wrapper" role="main">
