--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="/styles.css" />
 
-    <title>Tip Application</title>
+    <title>Intro signup-form</title>
   </head>
   <body>
     <div class="content-wrapper" role="main">
